# Agents

./: .cursorignore  .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  env.example  pyproject.toml  requirements.txt
.cursor/: README.md
agents/: README.md
docs/: architecture-ru.md  memory-subsystem-spec.md  routing_flow.md
evals/: __init__.py
implants/: README.md  implant-active-prompting.mdc  implant-analogical-prompting.mdc  implant-automatic-reasoning.mdc  implant-buffer-of-thoughts.mdc  implant-causal-reasoning.mdc  implant-chain-of-abstraction.mdc  implant-chain-of-code.mdc  implant-chain-of-draft.mdc  implant-chain-of-note.mdc  implant-chain-of-symbol.mdc  implant-chain-of-table.mdc  implant-chain-of-verification.mdc  implant-complexity-based-prompting.mdc  implant-constitutional-critique.mdc  implant-contextual-compression.mdc  implant-contrastive-cot.mdc  implant-cumulative-reasoning.mdc  implant-decomposed-prompting.mdc  implant-directional-stimulus.mdc  implant-dr-cot.mdc  implant-dynamic-few-shot.mdc  implant-emotion-prompting.mdc  implant-fact-verification.mdc  implant-generated-knowledge.mdc  implant-graph-of-thoughts.mdc  implant-instructional-hierarchy.mdc  implant-iteration-budget.mdc  implant-layer-of-thoughts.mdc  implant-least-to-most-prompting.mdc  implant-logic-of-thought.mdc  implant-maieutic-prompting.mdc  implant-mega-prompting.mdc  implant-metacognitive-prompting.mdc  implant-multi-agent-debate.mdc  implant-narrative-of-thought.mdc  implant-output-automata.mdc  implant-output-priming.mdc  implant-plan-and-solve-plus.mdc  (+26 more)
(+429 files in other folders)
